# leadstorefront

./: .dockerignore  .gitignore  .woodpecker.yaml  AGENTS.md  Makefile  README.md  go.mod  go.sum
api/routes/: article.go  article_category.go  country.go  health.go  product.go  routes.go
cmd/api/: main.go
cmd/platform_api/: main.go
cmd/platform_web/: main.go
cmd/web/: main.go
infra/: .env-dev  Caddyfile  Makefile  README.md  docker-compose.app.yaml  docker-compose.db.yaml  docker-compose.llm.yaml  docker-compose.local.yaml
infra/ansible/: inventory.ini  playbook.yaml
infra/ci/: woodpecker.yaml
infra/terraform/: .terraform.lock.hcl  apply.sh  destroy.sh  main.tf  output.sh  plan.sh  variables.tf
local/local_seed/: README.md  main.py  pyproject.toml
meetings/: jem-meeting1.txt
pkgs/: config.go
pkgs/middleware/: admin_auth.go  locations.go  locations_test.go  sessions.go  sessions_test.go
pkgs/models/: affiliate_provider.go  article.go  article_category.go  article_storefront.go  country.go  lead.go  lead_form_field.go  models_test.go  outbound_click.go  product.go  product_category.go  product_storefront.go  role.go  storefront.go  storefront_affiliate_provider.go  storefront_design.go  user.go
pkgs/utils/: attribution.go  attribution_test.go  auth.go  routes.go  routes_test.go
platform_api/: Dockerfile  Makefile  config.go
platform_api/routes/: affiliate_provider.go  article.go  article_category.go  auth.go  lead.go  (+9 more)
platform_web/: Dockerfile  Makefile  package-lock.json  package.json  vite.config.ts
web/: package-lock.json  package.json
(+72 files in other folders)
