[project]
name = "local-seed"
version = "0.1.0"
description = ""
authors = [
    {name = "Joe Gasewicz (UKHSA)",email = "joe.gasewicz@ukhsa.gov.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "local_seed", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
